<resources>
    <string name="app_name">FilzaFileManager</string>
    <string name="image_viewer_content_description">Image viewer</string>
    <string name="back_button">Back</string>
    <string name="draw_mode">Draw mode</string>
    <string name="highlight_mode">Highlight mode</string>
    <string name="eraser_mode">Eraser mode</string>
    <string name="zoom_mode">Zoom mode</string>
    <string name="clear_drawing">Clear drawing</string>
    <string name="reset_view">Reset view</string>
    <string name="save_image">Save image</string>
    <string name="unknown_song">Unknown Song</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="play_pause">Play/Pause</string>
    <string name="highlight_page">Highlight page</string>
    <string name="export_page">Export page</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="reset_zoom">Reset zoom</string>
    <string name="fit_to_screen">Fit to screen</string>
    <string name="export_all_pages">Export all pages</string>
    <string name="search">Search</string>
    <string name="search_hint">Tìm kiếm trong file...</string>
    <string name="clear_search">Clear search</string>
    <string name="toggle_line_numbers">Toggle line numbers</string>
    <string name="increase_font_size">Increase font size</string>
    <string name="decrease_font_size">Decrease font size</string>
    <string name="toggle_fullscreen">Toggle fullscreen</string>
    <string name="picture_in_picture">Picture in Picture</string>
    <string name="reset_video_position">Reset video position</string>
    
    <!-- New strings for modernized UI -->
    <string name="current_path">Current Path</string>
    <string name="menu_options">Menu options</string>
    <string name="create_folder">Create folder</string>
    <string name="import_file">Import file</string>
    <string name="file_icon">File icon</string>
    <string name="file_name">File name</string>
    <string name="more_options">More options</string>
    <string name="music_player">Music Player</string>
    <string name="album_art">Album art</string>
    <string name="video_player">Video Player</string>
    <string name="pdf_viewer">PDF Viewer</string>
    <string name="page_number">Page 1</string>
    <string name="pdf_page_image">PDF page image</string>
    <string name="text_viewer">Text Viewer</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="folder_name_hint">Enter folder name</string>
    <string name="rename_file">Rename File</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="file_thumbnail">File thumbnail</string>
    <string name="file_info">File info</string>
    
    <!-- Color picker strings -->
    <string name="select_color">Select Color</string>
    <string name="predefined_colors">Predefined Colors</string>
    <string name="custom_color">Custom Color</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    
    <!-- Google Drive upload strings -->
    <string name="upload_file">Upload File</string>
    <string name="uploading_file">Uploading file...</string>
    <string name="file_uploaded_successfully">File uploaded successfully</string>
    <string name="upload_failed">Upload failed</string>
    <string name="could_not_read_file">Could not read selected file</string>
    <string name="error_accessing_file">Error accessing file</string>
    <string name="selected_file_not_exist">Selected file does not exist</string>
    <string name="could_not_access_file">Could not access selected file</string>
    <string name="download_directory">Download directory</string>
    <string name="open_download_directory">Open Download Directory</string>
</resources>